Travis attempted memory fix